commiting requirement file to git

--- a/templates/hire/add_jobs.html
+++ b/templates/hire/add_jobs.html
@@ -48,8 +48,8 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-        // Initialize the map
-        var map = L.map('map').setView([27.7172, 85.3240], 13); // Default to Kathmandu
+         
+        var map = L.map('map').setView([27.7172, 85.3240], 13);  
         
         // Add OpenStreetMap tiles
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
